k8s/secrets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secrets-ingress
  namespace: secrets
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: secrets.local
      http:
        paths:
          - path: /vault
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8525
